apps/vikunja/vikunja-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ingress
  namespace: vikunja
  annotations:
    cert-manager.io/cluster-issuer: cluster-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - vikunja.makerspace.local
      secretName: vikunja-tls
  rules:
    - host: vikunja.makerspace.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vikunja
                port:
                  number: 3456
