apps/vikunja/vikunja-ts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vikunja-ts
  namespace: vikunja
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: vikunja
      port:
        number: 3456
  tls:
    - hosts:
        - vikunja # → vikunja.zebra-alewife.ts.net
